# 7k-project

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt
calculator/: atk_compare_mode.py  character_registry.py  config.example.json  config.json  config_loader.py  damage_calc.py  display.py  main.py  menu.py
calculator/characters/: biscuit.json
calculator/logic/: biscuit.py  freyja.py  klahan.py  ryan.py
calculator/tests/: TEST_STRATEGY.md  TEST_SUITE_SUMMARY.md  conftest.py  test_config_and_characters.py  test_damage_calc.py  test_edge_cases.py
docs/: SHOWCASES.md
